--- a/application/admin/View/Input/lsted.html
+++ b/application/admin/View/Input/lsted.html
@@ -14,10 +14,10 @@
                                     <div class="am-form-group">
                                         <div class="am-btn-toolbar">
                                             <div class="am-btn-group am-btn-group-xs">
-                                                <button type="button" class="am-btn am-btn-default am-btn-success"><span class="am-icon-plus"></span> 新增</button>
-                                                <button type="button" class="am-btn am-btn-default am-btn-secondary"><span class="am-icon-save"></span> 保存</button>
+                                                <a href="{:url('lst')}" type="button" class="am-btn am-btn-default am-btn-success"><span class="am-icon-plus"></span> 新增</a>
+                                               <!--  <button type="button" class="am-btn am-btn-default am-btn-secondary"><span class="am-icon-save"></span> 保存</button>
                                                 <button type="button" class="am-btn am-btn-default am-btn-warning"><span class="am-icon-archive"></span> 审核</button>
-                                                <button type="button" class="am-btn am-btn-default am-btn-danger"><span class="am-icon-trash-o"></span> 删除</button>
+                                                <button type="button" class="am-btn am-btn-default am-btn-danger"><span class="am-icon-trash-o"></span> 删除</button> -->
                                             </div>
                                         </div>
                                     </div>
@@ -69,12 +69,10 @@
             <td>{$vo.in_time|date="Y年m月d日",###}</td>
             <td>
                 <div class="tpl-table-black-operation">
-                    <a href="{:url('edit',array('id'=>$vo['id']))}">
-                        <i class="am-icon-pencil"></i> 入库
+                    <a href="javascript:;">
+                        <i class="am-icon-pencil"></i> 打印入库单
                     </a>
-                    <a onClick="return confirm('确定删除?');" href="{:url('del',array('id'=>$vo['id']))}" class="tpl-table-black-operation-del">
-                        <i class="am-icon-trash"></i> 删除
-                    </a>
+                    
                 </div>
             </td>
         </tr>
