--- a/application/admin/View/Inventory/lst.html
+++ b/application/admin/View/Inventory/lst.html
@@ -14,10 +14,10 @@
                                     <div class="am-form-group">
                                         <div class="am-btn-toolbar">
                                             <div class="am-btn-group am-btn-group-xs">
-                                                <button type="button" class="am-btn am-btn-default am-btn-success"><span class="am-icon-plus"></span> 新增</button>
+                                               <!--  <button type="button" class="am-btn am-btn-default am-btn-success"><span class="am-icon-plus"></span> 新增</button>
                                                 <button type="button" class="am-btn am-btn-default am-btn-secondary"><span class="am-icon-save"></span> 保存</button>
                                                 <button type="button" class="am-btn am-btn-default am-btn-warning"><span class="am-icon-archive"></span> 审核</button>
-                                                <button type="button" class="am-btn am-btn-default am-btn-danger"><span class="am-icon-trash-o"></span> 删除</button>
+                                                <button type="button" class="am-btn am-btn-default am-btn-danger"><span class="am-icon-trash-o"></span> 删除</button> -->
                                             </div>
                                         </div>
                                     </div>
@@ -54,7 +54,7 @@
                                                 <th>在库数量</th>
                                                 <th>最低库存量</th>
                                                 <th>最高库存量</th>
-                                                <th>操作</th>
+                                               <!--  <th>操作</th> -->
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -67,16 +67,7 @@
             <td>{$vo.ivt_quantity}</td>
             <td>{$vo.ivt_min_quantity}</td>
             <td>{$vo.ivt_max_quantity}</td>
-            <td>
-                <div class="tpl-table-black-operation">
-                    <a href="{:url('edit',array('id'=>$vo['id']))}">
-                        <i class="am-icon-pencil"></i> 编辑
-                    </a>
-                    <a onClick="return confirm('确定删除?');" href="{:url('del',array('id'=>$vo['id']))}" class="tpl-table-black-operation-del">
-                        <i class="am-icon-trash"></i> 删除
-                    </a>
-                </div>
-            </td>
+           
         </tr>
         {/volist}
         <!-- more data -->
