--- a/application/admin/View/Purchase/lst.html
+++ b/application/admin/View/Purchase/lst.html
@@ -4,7 +4,7 @@
                     <div class="am-u-sm-12 am-u-md-12 am-u-lg-12">
                         <div class="widget am-cf">
                             <div class="widget-head am-cf">
-                                <div class="widget-title  am-cf">出库单列表</div>
+                                <div class="widget-title  am-cf">缺货单列表</div>
 
 
                             </div>
@@ -14,8 +14,8 @@
                                     <div class="am-form-group">
                                         <div class="am-btn-toolbar">
                                             <div class="am-btn-group am-btn-group-xs">
-                                                <a href="{:url('lst')}" type="button" class="am-btn am-btn-default am-btn-success"><span class="am-icon-plus"></span> 新增</a>
-                                               <!--  <button type="button" class="am-btn am-btn-default am-btn-secondary"><span class="am-icon-save"></span> 保存</button>
+                                               <!--  <button type="button" class="am-btn am-btn-default am-btn-success"><span class="am-icon-plus"></span> 新增</button>
+                                                <button type="button" class="am-btn am-btn-default am-btn-secondary"><span class="am-icon-save"></span> 保存</button>
                                                 <button type="button" class="am-btn am-btn-default am-btn-warning"><span class="am-icon-archive"></span> 审核</button>
                                                 <button type="button" class="am-btn am-btn-default am-btn-danger"><span class="am-icon-trash-o"></span> 删除</button> -->
                                             </div>
@@ -48,31 +48,33 @@
                                     <table width="100%" class="am-table am-table-compact am-table-striped tpl-table-black " id="example-r">
                                         <thead>
                                             <tr>
-                                                <th>出库单编号</th>
-                                                <th>订单编号</th>
-                                                <th>客户名称</th>
-                                                <th>订单单总额</th>
-                                                <th>出库时间</th>
-                                             
+                                                <th>缺货单编号</th>
+                                                <th>产品编号</th>
+                                                <th>产品名称</th>
+                                                <th>缺货量</th>
+                                                <th>生成时间</th>
+                                              
                                                 <th>操作</th>
                                             </tr>
                                         </thead>
                                         <tbody>
        
-   {volist name="outRes" id="vo"}
+   {volist name="skoRes" id="vo"}
         <tr class="even gradeC">
-            <td>{$vo.out_num}</td>
-            <td>{$vo.order.order_num}</td>
-            <td>{$cusArr[$vo['order']['order_cus_id']]}</td>
-           
-            <td>{$vo.order.order_total_cost}</td>
-            <td>{$vo.out_time|date="Y年m月d日-H:m:s",###}</td>
+            <td>{$vo.sko_num}</td>
+            <td>{$vo.product.pdt_num}</td>
+            <td>{$vo.product.pdt_name}</td>
+            <td>{$vo.sko_quantity}</td>
+            <td>{$vo.sko_addtime|date="Y年m月d日",###}</td>
+
             <td>
                 <div class="tpl-table-black-operation">
-                    <a href="javascript:;">
-                        <i class="am-icon-pencil"></i> 打印出库单
+                    <a href="{:url('edit',array('id'=>$vo['id']))}">
+                        <i class="am-icon-pencil"></i> 生成采购单
                     </a>
-                   
+                    <a onClick="return confirm('确定删除?');" href="{:url('del',array('id'=>$vo['id']))}" class="tpl-table-black-operation-del">
+                        <i class="am-icon-trash"></i> 删除
+                    </a>
                 </div>
             </td>
         </tr>
@@ -85,7 +87,7 @@
                                 <div class="am-u-lg-12 am-cf">
 
                                     <div class="am-fr">
-                                        {$outRes->render()}
+                                        {$skoRes->render()}
                                     </div>
                                 </div>
                             </div>
