--- a/application/admin/View/stockout/lst.html
+++ b/application/admin/View/stockout/lst.html
@@ -14,10 +14,10 @@
                                     <div class="am-form-group">
                                         <div class="am-btn-toolbar">
                                             <div class="am-btn-group am-btn-group-xs">
-                                                <button type="button" class="am-btn am-btn-default am-btn-success"><span class="am-icon-plus"></span> 新增</button>
+                                               <!--  <button type="button" class="am-btn am-btn-default am-btn-success"><span class="am-icon-plus"></span> 新增</button>
                                                 <button type="button" class="am-btn am-btn-default am-btn-secondary"><span class="am-icon-save"></span> 保存</button>
                                                 <button type="button" class="am-btn am-btn-default am-btn-warning"><span class="am-icon-archive"></span> 审核</button>
-                                                <button type="button" class="am-btn am-btn-default am-btn-danger"><span class="am-icon-trash-o"></span> 删除</button>
+                                                <button type="button" class="am-btn am-btn-default am-btn-danger"><span class="am-icon-trash-o"></span> 删除</button> -->
                                             </div>
                                         </div>
                                     </div>
@@ -65,17 +65,20 @@
             <td>{$vo.product.pdt_num}</td>
             <td>{$vo.product.pdt_name}</td>
             <td>{$vo.sko_quantity}</td>
-            <td>{$vo.sko_addtime}</td>
+            <td>{$vo.sko_addtime|date="Y年m月d日",###}</td>
 
             <td>
                 <div class="tpl-table-black-operation">
-                    <a href="{:url('edit',array('id'=>$vo['id']))}">
-                        <i class="am-icon-pencil"></i> 编辑
+                 {if condition="$vo['sko_rep_id'] eq 0"}
+                    <a href="{:url('addrep',array('id'=>$vo['id'],'pdtId'=>$vo['sko_pdt_id']))}">
+                        <i class="am-icon-pencil"></i> 补货
                     </a>
-                    <a onClick="return confirm('确定删除?');" href="{:url('del',array('id'=>$vo['id']))}" class="tpl-table-black-operation-del">
-                        <i class="am-icon-trash"></i> 删除
-                    </a>
+                {else/}
+                      <i class="am-icon-pencil"></i> 已申请补货
+                {/if}
+                   
                 </div>
+                
             </td>
         </tr>
         {/volist}
